Update to dasm 3.2.0. Remove architectury and minecraft dependencies.